@@ -1,3 +1,7 @@
+2010-12-12  Torbjorn Granlund  <tege@gmplib.org>
+
+	* mpn/x86_64/k10/popcount.asm: New file.
+
 2010-12-11  Torbjorn Granlund  <tege@gmplib.org>
 
 	* mpn/sparc32/ultrasparct1: New directory.
